# quickstats

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  MultipleQuantiles_8hpp.html  MultipleQuantiles_8hpp_source.html  SingleQuantile_8hpp.html  SingleQuantile_8hpp_source.html  annotated.html  classes.html  classquickstats_1_1MultipleQuantilesFixedNumber-members.html  classquickstats_1_1MultipleQuantilesFixedNumber.html  classquickstats_1_1MultipleQuantilesVariableNumber-members.html  classquickstats_1_1MultipleQuantilesVariableNumber.html  classquickstats_1_1RssRunningDense-members.html  classquickstats_1_1RssRunningDense.html  classquickstats_1_1RssRunningDenseSkip-members.html  classquickstats_1_1RssRunningDenseSkip.html  classquickstats_1_1RssRunningSparse-members.html  classquickstats_1_1RssRunningSparse.html  classquickstats_1_1RssRunningSparseSkip-members.html  classquickstats_1_1RssRunningSparseSkip.html  classquickstats_1_1SingleQuantileFixedNumber-members.html  classquickstats_1_1SingleQuantileFixedNumber.html  classquickstats_1_1SingleQuantileVariableNumber-members.html  classquickstats_1_1SingleQuantileVariableNumber.html  dir_358b944b765b244e24e1765a77bb52dd.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  mad_8hpp.html  mad_8hpp_source.html  median_8hpp.html  median_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespacequickstats.html  namespaces.html  pairwise__sum_8hpp.html  (+12 more)
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js
include/quickstats/: MultipleQuantiles.hpp  SingleQuantile.hpp  mad.hpp  median.hpp  pairwise_sum.hpp  quickstats.hpp  rss.hpp  skip_values.hpp  utils.hpp
tests/: CMakeLists.txt
tests/R/: DESCRIPTION  NAMESPACE
tests/R/R/: RcppExports.R  functions.R
tests/R/src/: Makevars  RcppExports.cpp  pairwise_sum.cpp
tests/src/: MultipleQuantiles.cpp  SingleQuantile.cpp  mad.cpp  median.cpp  pairwise_sum.cpp  rss.cpp  skip_values.cpp  utils.h
